k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meals
  namespace: homelab
  labels:
    app: meals
spec:
  selector:
    app: meals
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
